--- a/parentHomePage.html
+++ b/parentHomePage.html
@@ -16,8 +16,8 @@
         <br>
         <br>
         <p>booking state : </p>
-        <label><input type="radio" name="view current booking">view current booking</label>
-        <label><input type="radio" name="view previouse booking">view previouse booking</label>
+        <label><input type="radio" name="view-booking">view current booking</label>
+        <label><input type="radio" name="view-booking">view previouse booking</label>
         <!--تنحط بنهايه الصفحه نضبطها بال css-->
         <label><input type="button" value="log out"></label>
         <br>
