link with jobRequest page

--- a/parentHomePage.html
+++ b/parentHomePage.html
@@ -9,7 +9,9 @@
         <label><input type="button" value="manage profile" ></label>
         <br>
         <br>
-        <label><input type="button" value="job request"></label>
+        <label>
+            <a href="C:\Users\asus\Documents\GitHub\web-project\jobRequest.html"><input type="button" value="new job request">
+            </a></label>
         <br>
         <br>
         <label><input type="button" value="offer list"></label>
