--- a/babySetterHomePage.html
+++ b/babySetterHomePage.html
@@ -12,9 +12,7 @@
         <p>job request</p>
         <br>
         <br>
-        <label><input type="radio" name="job-request" >view job request detail</label>
-        <label><input type="radio" name="job-request" >send offer(price)</label>
-        <label><input type="radio" name="job-request" >view job request list</label>
+        <label><input type="button" value="view job request list" ></label>
         <br>
         <br>
         <p>job status</p>
