--- a/babySetterHomePage.html
+++ b/babySetterHomePage.html
@@ -9,13 +9,9 @@
         <label><input type="button" value="manage profile"></label>
         <br>
         <br>
-        <p>job request</p>
-        <br>
-        <br>
-        <label><input type="radio" name="job-request" >view job request detail</label>
-        <label><input type="radio" name="job-request" >send offer(price)</label>
-        <label><input type="radio" name="job-request" >view job request list</label>
-        <br>
+       <a href="C:\Users\asus\Documents\GitHub\web-project\requestList.html">
+        <input type="button" name="job-request" value="view job request list" ></a>
+        
         <br>
         <p>job status</p>
         <br>
