--- a/homepageeM.html
+++ b/homepageeM.html
@@ -2,13 +2,17 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
+    <title>homebage</title>
 </head>
 <body>
-<a href="C:\Users\moner\OneDrive\المستندات\GitHub\web-project\loginasM.html">
-<button class="button button1">Loge in</button>
-</a>
+<p><a href="C:\Users\moner\OneDrive\المستندات\GitHub\web-project\loginasM.html">
+<button type ="button">Loge in</button>
+</a></p>
+
+<p>
 <a href="C:\Users\moner\OneDrive\المستندات\GitHub\web-project\signUphomeM.html">
-<button class="button button2">Sign up</button>
-</a>
+<button type="button">Sign up</button>
+</a></p>
 </body>
 </html> 
