--- a/loginasM.html
+++ b/loginasM.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
-
 <head>
+    <meta charset="UTF-8">
+    <title>loginas</title>
 </head>
 <body>
     <h1>
         Login us :
     </h1>
     <a href="C:\Users\moner\OneDrive\المستندات\GitHub\web-project\LoginNamePasM.html">
-<button class="button button1">Parent</button>
-<button class="button button2">Babysitter</button>
+<button type="button ">Parent</button>
+<button type="button ">Babysitter</button>
     </a>
 </body>
 </html> 
