--- a/signUphomeM.html
+++ b/signUphomeM.html
@@ -2,14 +2,16 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
+        <title>signUphome</title> 
 </head>
 <body>
 <h1>Sign up as :</h1>
 <a href="C:\Users\moner\OneDrive\المستندات\GitHub\web-project\signupParentM.html">
-<button class="button button1">Parent</button>
+<button type="button">Parent</button>
 </a>
 <a href="C:\Users\moner\OneDrive\المستندات\GitHub\web-project\signUpBabysitterM.html">
-<button class="button button2">Babysitter</button>
+<button type="button ">Babysitter</button>
 </a>
 </body>
 </html> 
