--- a/signUpBabysitterM.html
+++ b/signUpBabysitterM.html
@@ -1,35 +1,44 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
+        <meta charset="UTF-8">
+        <title>signUpbabysitter</title> 
     </head>
 <body>
 
  <h1>Sign Up</h1>
  <p>Please fill in this form to create an account.</p>
+ <form method="post">
+
 <label for="Name"><b>First Name </b></label>
  <input type="text" placeholder="Enter First Name" name="Name" required>
 
 <label for="Name"><b>Last Name </b></label>
  <input type="text" placeholder="Enter Last Name" name="Name" required>
+ <br>
 
  <label for="ID"><b>ID </b></label>
  <input type="text" placeholder="Enter ID" name="ID" required>
 
  <label for="age"><b>age</b></label>
  <input type="text" placeholder="Enter age" name="age" required>
-
+ 
+<br>
+<Label>Gendre:</Label>
  <input type="radio" name="gender" value="male"> Male
  <input type="radio" name="gender" value="female"> Female
  
+ <br>
 
- <hr>
  <label for="email"><b>Email</b></label>
- <input type="text" placeholder="Enter Email" name="email" required>
+ <input type="email" placeholder="Enter Email" name="email" required>
 
+ <label for="Pic"><b>Upload a photo </b></label>
+ <input type="file" placeholder="Enter City " name="City" required>
+<br>
  <label for="psw"><b>Password</b></label>
 <input type="password" placeholder="Enter Password" name="psw" required>
-
+<br>
 <label for="phone"><b>phone</b></label>
 <input type="text" placeholder="Enter your phone" name="phone" required>
 
@@ -39,7 +48,8 @@
 
 
 <p><label for="bio"><b>bio:</b></label></p>
- <textarea id="bio " name="bio " rows="4" cols="50"></textarea>
+ <textarea id="bio " name="bio " rows="4" cols="50">
+ </textarea>
  <br>
  
 
@@ -48,9 +58,9 @@
 <button type="button" onclick>Cancel</button>
 <button type="submit" class="signup">Sign Up</button>
 </div>
-</div>
+
 </form>
-</div>
+
 </body>
 </html>
 
