--- a/signupParentM.html
+++ b/signupParentM.html
@@ -1,35 +1,44 @@
 <!DOCTYPE html>
 <html>
     <head>
-        
+        <meta charset="UTF-8">
+        <title>signUpParent</title> 
     </head>
 <body>
 
  <h1>Sign Up</h1>
  <p>Please fill in this form to create an account.</p>
+ <form method ="post">
 <label for="Name"><b>First Name </b></label>
  <input type="text" placeholder="Enter First Name" name="Name" required>
 
 <label for="Name"><b>Last Name </b></label>
  <input type="text" placeholder="Enter Last Name" name="Name" required>
 
- <hr>
+ <br>
+
  <label for="email"><b>Email</b></label>
- <input type="text" placeholder="Enter Email" name="email" required>
+ <input type="email" placeholder="Enter Email" name="email" required>
 
  <label for="psw"><b>Password</b></label>
-<input type="password" placeholder="Enter Password" name="psw" required>
+<input type="password" placeholder="Enter Password" name="pic"  >
+<br>
+<label for="Pic"><b>Upload a photo </b></label>
+ <input type="file" placeholder="Enter City " name="City" required>
+<br>
+<label for="City"><b>City </b></label>
+ <input type="text" placeholder="Enter City " name="City" required>
 
+<label for="Location"><b>Location </b></label>
+ <input type="text" placeholder="Enter your Location " name="Location" required>
 
-<label for="Location"><b>City Location </b></label>
- <input type="text" placeholder="Enter City Location" name="Location" required>
-
+<br>
  <div >
 <button type="button" onclick>Cancel</button>
 <button type="submit" class="signup">Sign Up</button>
-</div>
-</div>
+ </div>
+
 </form>
-</div>
+
 </body>
 </html>
