--- a/requestList.html
+++ b/requestList.html
@@ -2,19 +2,20 @@
 <head>
 <title>request list</title>
 <meta charset="utf-8">
+<link rel="stylesheet" type="text/css" href="C:\Users\asus\Desktop\PA\.vscode\style.css">
 
+</head >
+<body class="request-list">
 
-</head>
-<body>
-
-<h2>  request list</h2>
+<h1>requests list</h1>
+<h3> This  is the list of available requests, get yourself a suitable one</h3>
 <br>
 
 
 
 
-
-  <div class="column"><img src="C:\Users\asus\Desktop\profile.jpg" width="80" height="80">
+  <div class="parent-profile">
+        <p class="photo"> <img src="C:\Users\asus\Desktop\profile.jpg" width="70" height="100" ></p>
    <p>
     <strong> Sara Ahmed</strong>
     <br>
@@ -22,12 +23,12 @@
     three kids,from 8pm to 10pm.
     <br>
     <br>
-      <a href="C:\Users\asus\Desktop\PA\Sara.html">
+      <a href="C:\Users\asus\Desktop\PA\.vscode\Sara.html">
         <img src="C:\Users\asus\Desktop\R (2).png"width="100"  height="40" alt="Sara">
       </a>
    </p>
 </div>
-  <div class="column" ><img src="C:\Users\asus\Desktop\family.jpg" width="80" height="80">
+  <div class="parent-profile" ><p class="photo"><img src="C:\Users\asus\Desktop\family.jpg" width="70" height="100"></p>
     <p>
         <strong> Sami Noor</strong>
         <br>
@@ -35,11 +36,11 @@
         tow kids,from 6am to 11am.
         <br>
         <br>
-          <a  href="C:\Users\asus\Desktop\PA\Sami.html">
+          <a  href="C:\Users\asus\Desktop\PA\.vscode\Sami.html">
             <img src="C:\Users\asus\Desktop\R (2).png"width="100"  height="40" alt="Sara">
           </a>
        </p></div>
-  <div class="column"><img src="C:\Users\asus\Desktop\baby.jpg" width="80" height="80">
+  <div class="parent-profile"><p class="photo"><img src="C:\Users\asus\Desktop\baby.jpg" width="70" height="100"></p>
     <p>
         <strong> Bushra Abdrahman</strong>
         <br>
@@ -47,14 +48,13 @@
         one kid,from 4pm to 8pm.
         <br>
         <br>
-          <a href="C:\Users\asus\Desktop\PA\Bushra.html">
+          <a href="C:\Users\asus\Desktop\PA\.vscode\Bushra.html">
             <img src="C:\Users\asus\Desktop\R (2).png"width="100"  height="40" alt="Sara">
           </a>
        </p></div>
       
-
-
-
-
 </body>
 </html>
+
+
+
