--- a/jobRequest.html
+++ b/jobRequest.html
@@ -110,7 +110,7 @@
             </fieldset>
             </p>
             <p class="Send-and-Cancel-request-button">
-                <input type="submit" value="send" class="Send-request-button"><input type="button"  class="Cancel-request-button" value="Cancel">
+                <input type="submit" value="send" class="Send-request-button"><a href="C:\Users\asus\Documents\GitHub\web-project\parentHomePage.html"><input type="button" class="Cancel-request-button" value="Cancel"></a>
           
            
 
