--- a/requestList.html
+++ b/requestList.html
@@ -24,7 +24,7 @@
     <br>
     <br>
       <a href="C:\Users\asus\Desktop\PA\.vscode\Sara.html">
-        <img src="C:\Users\asus\Desktop\R (2).png"width="100"  height="40" alt="Sara">
+        <input type="button" value="details" class="details-button">
       </a>
    </p>
 </div>
@@ -37,7 +37,7 @@
         <br>
         <br>
           <a  href="C:\Users\asus\Desktop\PA\.vscode\Sami.html">
-            <img src="C:\Users\asus\Desktop\R (2).png"width="100"  height="40" alt="Sara">
+            <input type="button" value="details" class="details-button">
           </a>
        </p></div>
   <div class="parent-profile"><p class="photo"><img src="C:\Users\asus\Desktop\baby.jpg" width="70" height="100"></p>
@@ -49,7 +49,7 @@
         <br>
         <br>
           <a href="C:\Users\asus\Desktop\PA\.vscode\Bushra.html">
-            <img src="C:\Users\asus\Desktop\R (2).png"width="100"  height="40" alt="Sara">
+            <input type="button" value="details" class="details-button">
           </a>
        </p></div>
       
