--- a/loginasM.html
+++ b/loginasM.html
@@ -9,8 +9,8 @@
         Login us :
     </h1>
     <a href="C:\Users\moner\OneDrive\المستندات\GitHub\web-project\LoginNamePasM.html">
-<button type="button ">Parent</button>
-<button type="button ">Babysitter</button>
+<button type="button">Parent</button>
+<button type="button" class="btn btn-info">Babysitter</button>
     </a>
 </body>
 </html> 
