--- a/requestList.html
+++ b/requestList.html
@@ -15,7 +15,7 @@
 
 
   <div class="parent-profile">
-        <p class="photo"> <img src="C:\Users\asus\Desktop\profile.jpg" width="70" height="100" ></p>
+        <p class="photo"> <img src="C:\Users\asus\Documents\GitHub\web-project\profile.jpg" width="70" height="100" ></p>
    <p>
     <strong> Sara Ahmed</strong>
     <br>
@@ -28,7 +28,7 @@
       </a>
    </p>
 </div>
-  <div class="parent-profile" ><p class="photo"><img src="C:\Users\asus\Desktop\family.jpg" width="70" height="100"></p>
+  <div class="parent-profile" ><p class="photo"><img src="C:\Users\asus\Documents\GitHub\web-project\family.jpg" width="70" height="100"></p>
     <p>
         <strong> Sami Noor</strong>
         <br>
@@ -40,7 +40,7 @@
             <input type="button" value="details" class="details-button">
           </a>
        </p></div>
-  <div class="parent-profile"><p class="photo"><img src="C:\Users\asus\Desktop\baby.jpg" width="70" height="100"></p>
+  <div class="parent-profile"><p class="photo"><img src="C:\Users\asus\Documents\GitHub\web-project\baby.jpg" width="70" height="100"></p>
     <p>
         <strong> Bushra Abdrahman</strong>
         <br>
