--- a/loginasM.html
+++ b/loginasM.html
@@ -10,7 +10,7 @@
     </h1>
     <a href="C:\Users\moner\OneDrive\المستندات\GitHub\web-project\LoginNamePasM.html">
 <button type="button">Parent</button>
-<button type="button" class="btn btn-info">Babysitter</button>
+<button type="button">Babysitter</button>
     </a>
 </body>
 </html> 
