--- a/requestList.html
+++ b/requestList.html
@@ -2,7 +2,7 @@
 <head>
 <title>request list</title>
 <meta charset="utf-8">
-<link rel="stylesheet" type="text/css" href="C:\Users\asus\Documents\GitHub\web-project\style.css">
+<link rel="stylesheet" type="text/css" href="../web-project/style.css">
 
 </head >
 <body class="request-list">
