--- a/Bushra.html
+++ b/Bushra.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="C:\Users\asus\Desktop\PA\.vscode\style.css"> 
+    <link rel="stylesheet" type="text/css" href="../web-project/style.css"> 
     <title>Bushra</title>
     
 
