--- a/jobRequest.html
+++ b/jobRequest.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     
-    <link rel="stylesheet" type="text/css" href="C:\Users\asus\Documents\GitHub\web-project\style.css">
+    <link rel="stylesheet" type="text/css" href="../web-project/style.css">
     <title> jobRequest</title>
 </head>
 <body class="job-request-page">
