--- a/veiwMyRequests.html
+++ b/veiwMyRequests.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="C:\Users\asus\Documents\GitHub\web-project\style.css">
 
 </head >
-<body class="request-list">
+<body class="background">
 
 
 
