--- a/viewOfferList.html
+++ b/viewOfferList.html
@@ -2,10 +2,10 @@
 <head>
 <title>my  requests list</title>
 <meta charset="utf-8">
-<link rel="stylesheet" type="text/css" href="C:\Users\asus\Documents\GitHub\web-project\style.css">
+<link rel="stylesheet" type="text/css" href="../web-project/style.css">
 
 </head >
-<body class="request-list">
+<body class="background">
 
 
 
