--- a/requestList.html
+++ b/requestList.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="../web-project/style.css">
 
 </head >
-<body class="request-list">
+<body class="background">
 
 <h1>requests list</h1>
 <h3> This  is the list of available requests, get yourself a suitable one</h3>
