--- a/Sami.html
+++ b/Sami.html
@@ -10,7 +10,7 @@
 
 <body class="parent">
     <div class="kids-info">
-        <h2>kids</h2>
+        <h2>Kids</h2>
         <h5>Joly</h5>
         <h6>4 years old </h>
             <hr>
@@ -21,7 +21,7 @@
              
                  <div class="services">
                     <p>
-                    <h2>services</h2>
+                    <h2>Services</h2>
                     <ul>
 
                          <li> Playing games and having fun</li>
@@ -31,14 +31,14 @@
                  </div>
                  <div class="workDays">
                     <p>
-                    <h2>work days</h2>
+                    <h2>Work days</h2>
                     5 days a week (Sunday to Thursday  )<br>
                     from 6am to 11am 
                 </p>
                  </div>
                  <div class="location" >
                     <p>
-                    <h2>location</h2>
+                    <h2>Location</h2>
                     Staff Accommodation at King Saud University  
                 </p>
                  </div>
