--- a/Bushra.html
+++ b/Bushra.html
@@ -11,7 +11,7 @@
 <body class="parent">
    
          <div class="kids-info">
-            <h2>kids</h2>
+            <h2>Kids</h2>
         <h5>Rawan</h5>
         <h6>9 months</h>
             <hr>
@@ -29,14 +29,14 @@
                  </div>
                  <div class="workDays">
                     <p>
-                    <h2>work days</h2>
+                    <h2>Work days</h2>
                     4 days a week (Sunday to Wednesday)<br>
                     from 4pm to 8pm 
                 </p>
                  </div>
                  <div class="location">
                     <p>
-                    <h2>location</h2>
+                    <h2>Location</h2>
                     East Riyadh Al Murooj District 
                 </p>
                  </div>
