--- a/babySetterHome.html
+++ b/babySetterHome.html
@@ -2,29 +2,32 @@
 <html>
     <head>
         <mata charset="utf-8">
+        <link rel="stylesheet" type="text/css" href="../web-project/style.css">
         <title>babySetterHomePage</title>
     </head>
-    <body >
-        <fieldset>
-        <label><input type="button" value="manage profile"></label>
+    <body class="background" style="text-align:center">
+        <br>
+        <fieldset class="home-page-border">
+        <br>
+        <label onclick="location.href='signUpBabysitterM.html';"><input type="button" value="manage profile" class="details-button" ></label>
         <br>
         <br>
-        <p>job request</p>
+        <label onclick="location.href='requestList.html';"><input type="button" value="view job request list" class="details-button"></label>
         <br>
         <br>
-        <label><input type="button" value="view job request list" ></label>
+        <strong style="font-size: 20px;background-color:rgb(77, 145, 229) ;">job status :</strong>
         <br>
         <br>
-        <p>job status</p>
+        <label onclick="location.href='currentJob.html';"><input type="radio" name="job-status" >current job</label>
+        <label onclick="location.href='previousJob.html';"><input type="radio" name="job-status" >previous job</label>
         <br>
         <br>
-        <label><input type="radio" name="job-status" >current job</label>
-        <label><input type="radio" name="job-status" >previous job</label>
-        <br>
-        <label><input type="button" value="view my review and rate"></label>
+        <label onclick="location.href='ReviewAndRate.html';"><input type="button" value="view review and rate" class="details-button"></label>
         <br>
         <br>
-        <label><input type="button" value="offer status" ></label>
+        <label onclick="location.href='offerStatus.html';"><input type="button" value="offer status" class="details-button"></label>
+        <br>
+        <br>
     </fieldset>
     </body>
 </html>
