--- a/bookingStatus.html
+++ b/bookingStatus.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <mata charset="utf-8"></mata>
+        <title>booking status</title>
     </head>
     <body>
-        
+
     </body>
 </html>
