--- a/ReviewAndRate.html
+++ b/ReviewAndRate.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" type="text/css" href="../web-project/style.css">
         <title>ViewReviewAndRate</title>
     </head>
-    <body class="background" >
+    <body class="background" style="text-align:center">
         <strong>review :</strong>
 
         <strong>rate :</strong>
