--- a/bookingStatus.html
+++ b/bookingStatus.html
@@ -4,7 +4,7 @@
         <mata charset="utf-8"></mata>
         <title>booking status</title>
     </head>
-    <body>
+    <body class="background" style="text-align:center">
 
     </body>
 </html>
