--- a/offerStatus.html
+++ b/offerStatus.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <mata charset="UTF-8">
+        <title>offer status</title>
     </head>
-    <body>
-        
+    <body class="background" style="text-align:center">
+
     </body>
 </html>
