--- a/currentJob.html
+++ b/currentJob.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <title>current job</title>
+        <meta charset="UTF-8">
     </head>
-    <body>
+    <body class="background" style="text-align:center">
         
     </body>
 </html>
