--- a/babySetterHome.html
+++ b/babySetterHome.html
@@ -18,8 +18,7 @@
         <strong style="font-size: 20px;background-color:rgb(77, 145, 229) ;">job status :</strong>
         <br>
         <br>
-        <label onclick="location.href='currentJob.html';"><input type="radio" name="job-status" >current job</label>
-        <label onclick="location.href='previousJob.html';"><input type="radio" name="job-status" >previous job</label>
+        <label onclick="location.href='jobStatus.html';"><input type="button" value="view job status" class="details-button"></label>
         <br>
         <br>
         <label onclick="location.href='ReviewAndRate.html';"><input type="button" value="view review and rate" class="details-button"></label>
