--- a/LoginNamePasM.html
+++ b/LoginNamePasM.html
@@ -2,7 +2,9 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="../web-project/style.css">
   <title>LogeinS</title> 
+
 </head>
 <body>
     <h1>
