--- a/mainHomePageM.html
+++ b/mainHomePageM.html
@@ -7,13 +7,34 @@
     <title>main home page</title> 
 </head>
 <body class="backgroundHomePage" style="text-align:center ; margin-top: 13%;" >
-    <editText class="homePage">
+
+<header>
+    <div id="logo">
+        <h3>main list</h3>
+    </div>
+    <nav>
+        <ul>
+            <li><a href="../web-project/offerList.html">offer list</a></li>
+            <li><a href="../web-project/signUpBabysitterM.html" >manage babysitter profile</a></li>
+            <li><a href="../web-project/signupParentM.html">manage parent profile</a></li>
+            <li><a href="../web-project/jobRequest.html">view job request</a></li>
+            <li><a href="../web-project/bookingStatus.html">view booking status</a></li>
+            <li><a href="../web-project/offerStatus.html">view offer status</a></li>
+            <li><a href="../web-project/jobStatus.html">view job status</a></li>
+            <li><a href="../web-project/ReviewAndRate.html">view my review and rate</a></li>
+        </ul>
+    </nav>
+</header>
+
+<editText class="homePage">
+<form>
 <h1>Sign up as :</h1>
 <label onclick="location.href='signUpParentM.html';"><input type="button" value="parent" class="details-button"></label>
-<label onclick="location.href='signUpBabysitterM.html';"><input type="button" value="Babysitter" class="details-button"></button>
+<label onclick="location.href='signUpBabysitterM.html';"><input type="button" value="Babysitter" class="details-button"></label>
 <h1>Login as :</h1>
 <label onclick="location.href='LoginNamePasM.html';"><input type="button" value="parent" class="details-button"></label>
-<label onclick="location.href='LoginNamePasM.html';"><input type="button" value="Babysitter" class="details-button"></label>
+<label onclick="location.href='LoginNamePasM.html';"><input type="button" value="Babysitter " class="details-button"></label>
+</form>
 </editText>
 </body>
 </html> 
