--- a/Thank.html
+++ b/Thank.html
@@ -9,6 +9,12 @@
 
 <body class="background" >
 <h1 class="thank-you"> Thank You ! </h1>
-<h3> Your rating and review has been successfully submitted. Thanks! </h3>
+
+<h2 class="submitted-thank"> Your rating and review has been successfully submitted. Thanks! </h2>
+
+<a href="parentHomePage.html">
+    <input type="button" value="back" class="details-button">
+  </a>
+
 </body>  
 </html>
