--- a/offerList.html
+++ b/offerList.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML >
 <html>
   <head>
-    
+   <meta charset="utf-8"> 
     <title>Offer List</title>
   </head>
     <body>
@@ -15,85 +15,16 @@
           <h4>BabySitter</h4>
         </h1>
       </div>
-      <div>
-<label>Phone : 054367890 <br>
-E-mail : Jenny234@gmail.com 
-</div>
-<br> 
-<br>
+<label>
+  <p>responsible babysitter seeking for deliver child care excellence for the family, have worked as a babysitter for 4 families and worked for daycare worker.</p>
 <div>
-<p>responsible babysitter seeking for deliver child care excellence for the family, have worked as a babysitter for 4 families and worked for daycare worker.</p>
-<h3>Experience</h3>
-2015 - 2018   babysitter
-<br>
-<br>
-* worked as regular babysitter for childeren from 4 diferent families, received frequent commendations from all four sets of parents<br>
-* Taught a toddler to swim, along with water safety lessons.<br> <br>
-2018 - 2022    DayCare Volunteer
-<br>
-<br>
-* volunteered weekely at a mid-sized daycare, responsible for childeren interaction, conflict resolution, playground supervision, and game creation.<br>
-* changed diapers on little kids.
-<br>
-<h3>Education</h3>
-Texas A & M university <br>
-Bachleor of Arts : child care.
-</div>
-<br>
-<br>
-<div>
-<button>Profile</button>                                                                                       
-<a href="index.html"><button>View Details</button></a>
+<a href="ProfileInformation.html"><button>Profile</button></a>                                                                                       
+<a href=><button>View Details</button></a>
 <button>accept / reject</button>
 </label>
 </div>
 </fieldset>
-
 <br>
-
-<fieldset>
-  <div>
-  <img src = "IMG_7997.JPG" width="100" height="80">
-  </div>
-  <div>
-    <h1>Debra Brambila</h1>
-    <h4>BabySitter</h4>
-  </h1>
-  </div>
-  <div>
-<label>Phone : 056559876 <br>
-E-mail : debraDB@gmail.com 
-</div>
-<br> 
-<br>
-<div>
-attentive childcare professional offering 5 years of Experience caring for up to 5 childeren. positive role model focuse on supporting development and teaching new skills.
-<br>
-<h3>Experience</h3>
-2015 - 2017 special needs child caregiver
-<br>
-<br>
-* observed childeren to productivity identity issuses with emotional or physical development and worked with parents and supervisiors to address concerns<br>
-* met with parents about daily activities, positive developments and issuses<br> <br>
-2017 - 2022    Freelancing BabySitter
-<br>
-<br>
-* Fostered good relationships with parents consisting of effcient communication and teamwork.<br>
-* taught language skills by reading books to childeren before bedtime.
-<br>
-<h3>Education</h3>
-Nevada state college <br>
-Bachleor of Arts : libreal arts and general studies.
-</div>
-<br>
-<br>
-<div>
-<button>Profile</button>                                                                                          
-<a href="index.html"><button>View Details</button></a>
-<button>accept / reject</button>
-</label>
-</div>
-</fieldset>
 <div>
 <a>
 <button>Log Out</button>
@@ -101,7 +32,7 @@ Bachleor of Arts : libreal arts and general studies.
 <button>Page Home</button>
 <button>Back</button>
 </div>
-<!--ji-->
+
 </body>
 </html>
 
