--- a/mainHomePageM.html
+++ b/mainHomePageM.html
@@ -6,7 +6,18 @@
     <link rel="stylesheet" type="text/css" href="../web-project/style.css">
     <title>main home page</title> 
 </head>
-<body class="backgroundHomePage" style="text-align:center ; margin-top: 13%;" >
+<body class="backgroundHomePage" style="text-align:center ; margin-top:170px; ">
+<editText class="homePage">
+<form>
+<h1>Sign up as :</h1>
+<label onclick="location.href='signUpParentM.html';"><input type="button" value="parent" class="details-button"></label>
+<label onclick="location.href='signUpBabysitterM.html';"><input type="button" value="Babysitter" class="details-button"></label>
+<h1>Login as :</h1>
+<label onclick="location.href='LoginNamePasM.html';"><input type="button" value="parent" class="details-button"></label>
+<label onclick="location.href='LoginNamePasM.html';"><input type="button" value="Babysitter " class="details-button"></label>
+</form>
+</editText>
+
 
 <header>
     <div id="logo">
@@ -26,15 +37,5 @@
     </nav>
 </header>
 
-<editText class="homePage">
-<form>
-<h1>Sign up as :</h1>
-<label onclick="location.href='signUpParentM.html';"><input type="button" value="parent" class="details-button"></label>
-<label onclick="location.href='signUpBabysitterM.html';"><input type="button" value="Babysitter" class="details-button"></label>
-<h1>Login as :</h1>
-<label onclick="location.href='LoginNamePasM.html';"><input type="button" value="parent" class="details-button"></label>
-<label onclick="location.href='LoginNamePasM.html';"><input type="button" value="Babysitter " class="details-button"></label>
-</form>
-</editText>
 </body>
 </html> 
