--- a/veiwDetailsOffer2.html
+++ b/veiwDetailsOffer2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="../web-project/style.css"> 
-    <title>Sara</title>
+    <title>Debra</title>
     
 
 </head>
@@ -15,7 +15,7 @@
          <div>
         <h3>Debra Brambila</h3>
         <p>Hello! I'm very enthusiastic when it comes kids. I love caring for them, playing with them, exploring, and trying new things. Im punctual, relyable and responsible. I'm also very respectful and honest. I have experience caring for different ages from infants to school aged kids, babysitting for my friends and family. </p>
-        <a href=""><input type="button" value=" babysitter profile" class="Send-request-button"></a>
+        <a href="../web-project/ProfileInformation2.html""><input type="button" value=" babysitter profile" class="Send-request-button"></a>
                  </div>
                 </div>
                  <div class="Experience">
@@ -46,7 +46,7 @@
                         <input type="submit" value="Accept" class="Send-request-button"><a href="../web-project/parentHomePage.html"><input type="button" class="Cancel-request-button" value="reject"></a>
                  </form>
                  <div class="BabysitterPhoto">
-                    <img src="../web-project/family.jpg" width="250" height="150" >
+                    <img src="../web-project/Debra.jfif" width="250" height="150" >
 
                  </div>
 
