--- a/ProfileInformation.html
+++ b/ProfileInformation.html
@@ -29,7 +29,7 @@ Bachleor of Arts : child care.
           </div>
           <br>
                 <div>
-                <a href="reatingreview.html"><button>View Revating/Review</button></a>
+                <a href="../web-project/reatingreview.html"><button>View Revating/Review</button></a>
                 </div>
         </fieldset>
     </body>
