--- a/bookingStatus.html
+++ b/bookingStatus.html
@@ -5,6 +5,23 @@
         <title>booking status</title>
     </head>
     <body class="background" style="text-align:center">
+        <h3> current booking : </h3>
+        <p> you have sent booking request to sami but he doesn't responce yet !! 
+            be patient he will responce soon .
+        </p>
+        <h3> previous booking : </h3>
+        <table border="3px">
+            <tbody>
+            <tr> 
+                <th>year</th>
+                <th>number of hour</th>
+                <th>name of babysetter</th>
+            </tr>
+            <tr>
 
+            </tr>
+        </tbody>
+
+        </table>
     </body>
 </html>
