--- a/jobStatus.html
+++ b/jobStatus.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>current job</title>
+        <title>job status</title>
         <meta charset="UTF-8">
     </head>
     <body class="background" style="text-align:center">
