--- a/bookingStatus.html
+++ b/bookingStatus.html
@@ -16,10 +16,51 @@
                 <th>year</th>
                 <th>number of hour</th>
                 <th>name of babysetter</th>
+                <th>price per hour</th>
             </tr>
             <tr>
-
+                <td>2022</td>
+                <td>3 hours</td>
+                <td>sami</td>
+                <td>50 SR</td>
             </tr>
+            <tr>
+                <td>2022</td>
+                <td>5 hours</td>
+                <td>sara</td>
+                <td>70 SR</td>
+            </tr>
+            <tr>
+                <td>2021</td>
+                <td>2.5 hours</td>
+                <td>sami</td>
+                <td>56 SR</td>
+            </tr>
+            <tr>
+                <td>2021</td>
+                <td>1 hour</td>
+                <td>bushra</td>
+                <td>80 SR</td>
+            </tr>
+            <tr>
+                <td>2021</td>
+                <td>3 hours</td>
+                <td>sami</td>
+                <td>40 SR</td>
+            </tr>
+            <tr>
+                <td>2021</td>
+                <td>3 hours</td>
+                <td>fatima</td>
+                <td>50 SR</td>
+            </tr>
+            <tr>
+                <td>2019</td>
+                <td>3 hours</td>
+                <td>dana</td>
+                <td>60 SR</td>
+            </tr>
+
         </tbody>
 
         </table>
