--- a/reatingreview.html
+++ b/reatingreview.html
@@ -12,11 +12,11 @@
             <div>
                 <li><p> good at work and very responsible</p></li>
                 <hr>
-               <li><p> jenny was taking care of my chidlderen all the time</p></li>
+               <li><p> jenny was taking care of my children all the time</p></li>
                 <hr>
-                <li><p> she is the best babysitter i have ever see it</p></li>
+                <li><p> she is the best babysitter i have ever seen</p></li>
                 <hr>
-                <li><p> my cilderen love and missed her so much</p></li>
+                <li><p> my children love and missed her so much</p></li>
                 </div>  
         </fieldset>
     </body>
