--- a/bookingStatus.html
+++ b/bookingStatus.html
@@ -3,6 +3,7 @@
     <head>
         <mata charset="utf-8"></mata>
         <title>booking status</title>
+        <link rel="stylesheet" type="text/css" href="../web-project/style.css">
     </head>
     <body class="background" style="text-align:center">
         <h3> current booking : </h3>
@@ -10,7 +11,7 @@
             be patient he will responce soon .
         </p>
         <h3> previous booking : </h3>
-        <table border="3px">
+        <table border="3px" class="tableBooking">
             <tbody>
             <tr> 
                 <th>year</th>
