--- a/reatingreview.html
+++ b/reatingreview.html
@@ -16,7 +16,7 @@
                 <hr>
                 <li><p> she is the best babysitter i have ever seen</p></li>
                 <hr>
-                <li><p> my children love and missed her so much</p></li>
+                <li><p> my children love her so much</p></li>
                 </div>  
         </fieldset>
     </body>
