--- a/offerList.html
+++ b/offerList.html
@@ -8,7 +8,7 @@
       
       <fieldset>
         <div>
-       <img src="IMG_7995.JPG" width="100" height="80">  
+       <img src=".../web-project/img_7995.jbg" width="100" height="80">  
        </div>
        <div>
         <h1>Jenny John<h1>
