--- a/reatingreview.html
+++ b/reatingreview.html
@@ -7,7 +7,7 @@
     <body>
         <fieldset>
             <div>
-            <img src = "IMG_8053.jpg" width="100" height="60"> 
+            <img src = ".../web-project/IMG_8053.jbg" width="100" height="60"> 
             </div>
             <div>
                 <li><p> good at work and very responsible</p></li>
