--- a/offerList2.html
+++ b/offerList2.html
@@ -7,7 +7,7 @@
     <body>
         <fieldset>
             <div>
-            <img src = "IMG_7997.JPG" width="100" height="80">
+            <img src = ".../web-project/img_7997.jbg" width="100" height="80">
             </div>
             <div>
               <h1>Debra Brambila</h1>
