--- a/bookingStatus.html
+++ b/bookingStatus.html
@@ -4,6 +4,8 @@
         <mata charset="utf-8"></mata>
         <title>booking status</title>
         <link rel="stylesheet" type="text/css" href="../web-project/style.css">
+        <link rel="stylesheet" type="text/css" href="../web-project/booking.css">
+
     </head>
     <body class="background" style="text-align:center">
         <h3> current booking : </h3>
@@ -11,7 +13,7 @@
             be patient he will responce soon .
         </p>
         <h3> previous booking : </h3>
-        <table border="3px" class="tableBooking">
+        <table border= 3px class="tableBooking">
             <tbody>
             <tr> 
                 <th>year</th>
