--- a/mainHomePageM.html
+++ b/mainHomePageM.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="../web-project/style.css">
+    <link rel="stylesheet" type="text/css" href="../web-project/main.css">
     <title>main home page</title> 
 </head>
-<body class="backgroundHomePage" style="text-align:center ; margin-top: 13%;" >
+<body class="backgroundHomePage" style="text-align:center " >
 
 <header>
     <div id="logo">
