--- a/veiwDetailsOffer1.html
+++ b/veiwDetailsOffer1.html
@@ -47,7 +47,7 @@
                         <input type="submit" value="Accept" class="Send-request-button"><a href="../web-project/parentHomePage.html"><input type="button" class="Cancel-request-button" value="reject"></a>
                  </form>
                  <div class="BabysitterPhoto">
-                    <img src="../web-project/Jenny.jpg" width="250" height="150" >
+                    <img src="../web-project/IMG_7995.JPG" width="250" height="150" >
 
                  </div>
 
