--- a/veiwDetailsOffer2.html
+++ b/veiwDetailsOffer2.html
@@ -46,7 +46,7 @@
                         <input type="submit" value="Accept" class="Send-request-button"><a href="../web-project/parentHomePage.html"><input type="button" class="Cancel-request-button" value="reject"></a>
                  </form>
                  <div class="BabysitterPhoto">
-                    <img src="../web-project/Debra.jfif" width="250" height="150" >
+                    <img src="../web-project/IMG_7997.JPG" width="250" height="150" >
 
                  </div>
 
