--- a/veiwDetailsOffer1.html
+++ b/veiwDetailsOffer1.html
@@ -14,7 +14,7 @@
         <h2>Baby sitter</h2>
          <div>
         <h3>Jenny John</h3>
-        <p>Hi there! My name is Jenny  and I am a responsible and experienced babysitter seeking jobs. Since I have two siblings and lots of cousins; caring for children is something that comes naturally to me. I also started working with children at the age of 12 as a music teacher assistant, then as a camp leader, as a volunteer at charity events and as a babysitter </p>
+        <p>responsible babysitter seeking for deliver child care excellence for the family, have worked as a babysitter for 4 families and worked for daycare worker. </p>
         <a href="../web-project/ProfileInformation.html"><input type="button" value=" babysitter profile" class="Send-request-button"></a>
                  </div>
                 </div>
