--- a/veiwDetailsOffer2.html
+++ b/veiwDetailsOffer2.html
@@ -14,7 +14,7 @@
         <h2>Baby sitter</h2>
          <div>
         <h3>Debra Brambila</h3>
-        <p>Hello! I'm very enthusiastic when it comes kids. I love caring for them, playing with them, exploring, and trying new things. Im punctual, relyable and responsible. I'm also very respectful and honest. I have experience caring for different ages from infants to school aged kids, babysitting for my friends and family. </p>
+        <p>attentive childcare professional offering 5 years of Experience caring for up to 5 childeren, positive role model focuse on supporting development and teaching new skills. </p>
         <a href="../web-project/ProfileInformation2.html""><input type="button" value=" babysitter profile" class="Send-request-button"></a>
                  </div>
                 </div>
