--- a/ProfileInformation.html
+++ b/ProfileInformation.html
@@ -29,8 +29,23 @@ Bachleor of Arts : child care.
           </div>
           <br>
                 <div>
-                <a href="../web-project/reatingreview.html"><button>View Revating/Review</button></a>
+                <a href="../web-project/reatingreview.html"><button>Contact for interview</button></a>
                 </div>
+        </fieldset>
+        <fieldset>
+       
+            <div>
+            <img src = "../web-project/IMG_8053.jpg" width="100" height="60"> 
+            </div>
+            <div>
+                <li><p> good at work and very responsible</p></li>
+                <hr>
+               <li><p> jenny was taking care of my children all the time</p></li>
+                <hr>
+                <li><p> she is the best babysitter i have ever seen</p></li>
+                <hr>
+                <li><p> my children love her so much</p></li>
+                </div>  
         </fieldset>
     </body>
 </html>
