--- a/ProfileInformation2.html
+++ b/ProfileInformation2.html
@@ -29,8 +29,25 @@
             </div>
             <br>
             <div>
-                <a href="reatingreview2.html"><button>View Reating/Review</button></a>
+                <a href="reatingreview2.html"><button>Contact for interview</button></a>
             </div>
+            </fieldset>
+            <fieldset>
+                <div>
+              <img src = "../web-project/IMG_8053.jpg" width="100" height="60">
+              </div>
+        
+              <div>
+        <li><p> very professional and ontime</p></li>
+        <hr>
+        <li><p> debra was very helpful with me and my kids</p></li>
+        <hr>
+        <li><p> she hlep me to do plan for my childeren and activities for them</p></li>
+        <hr>
+        <li><p> without her I get lost because my time all it in the work as a doctor</p></li>
+        <hr>
+        <li><p> thank you debra for all what you do for my little babies</p></li>
+              </div>
             </fieldset>
     </body>
 </html>
