--- a/LoginNamePasM.html
+++ b/LoginNamePasM.html
@@ -4,26 +4,19 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="../web-project/style.css">
   <title>LogeinS</title> 
-<style type="text/css">
-  
-.sub{font-family:Arial ;
-font-size:20pt;}
-
-</style>
 </head>
-
-  <body class="background" style="text-align:center ; margin-top: 30%;width: 250px;" >
+  <body class="background" style="text-align:center ; margin-top: 10%;font-family:Arial; font-Size:20pt" >  
 
     <h1>
      Login
     </h1>
     <form method="post">
       
-      <label class = "sub">Username</label>
+      <label >Username</label>
             <input type ="text" required>
             <br>
 
-            <label class="sub">Password</label>
+            <label>Password</label>
             <input type=" Psw " placeholder="Password" required>
 <br>
 <br>
