--- a/signUpBabysitterM.html
+++ b/signUpBabysitterM.html
@@ -7,7 +7,7 @@
 
     </head>
 
-    <body class="background" style="text-align:center ; margin-top: 2%; border-style:groove ;" >  
+    <body class="background" style="text-align:center ; margin-top: 2%; border-style:groove ;font-family:Arial;font-size: 12pt" >  
 
 
  <h1>Sign Up</h1>
@@ -75,7 +75,8 @@
 <input type="button" value="Signup" class="details-button">
 <input type="button" value="Edit" class="details-button">
 
-
+<br>
+<br>
 </div>
 
 </form>
