--- a/mainHomePageM.html
+++ b/mainHomePageM.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="../web-project/style.css">
+    <link rel="stylesheet" type="text/css" href="../web-project/mainHomePage.css">
     <title>main home page</title> 
 </head>
 <body class="backgroundHomePage" style="text-align:center ; margin-top:170px; ">
