--- a/jobStatus.html
+++ b/jobStatus.html
@@ -5,6 +5,12 @@
         <meta charset="UTF-8">
     </head>
     <body class="background" style="text-align:center">
-        
+        <h3>current job :</h3>
+        <p>a full time babysitter for ms.reema until 30 may 2023
+            <br>teacher has 3 child (fahad 2 years old , dana 4 years old , sara 3 month old)
+            <br>in riyadh 
+            <br> turki alawal street 
+            <br> price per hour work 50SR</p>
+        <h3>previous job :</h3>
     </body>
 </html>
