--- a/mainHomePageM.html
+++ b/mainHomePageM.html
@@ -9,16 +9,15 @@
  
     <title>main home page</title> 
 </head>
-<body class="backgroundHomePage" >
-
+<body class="backgroundHomePage"  >
     <h1 class="menu"> Menu</h1>
 
-<editText class="homePage">
+<editText class="homePage" style="margin-left:-70px ; margin-top: -45px;">
 <form>
-<h1>Sign up as :</h1>
+<h2>Sign up as :</h2>
 <label onclick="location.href='signUpParentM.html';"><input type="button" value="parent" class="details-buttonn"></label>
 <label onclick="location.href='signUpBabysitterM.html';"><input type="button" value="Babysitter" class="details-buttonn"></label>
-<h1>Login as :</h1>
+<h2>Login as :</h2>
 <label onclick="location.href='LoginNamePasM.html';"><input type="button" value="parent" class="details-buttonn"></label>
 <label onclick="location.href='LoginNamePasM.html';"><input type="button" value="Babysitter " class="details-buttonn"></label>
 </form>
