--- a/LoginNamePasM.html
+++ b/LoginNamePasM.html
@@ -23,7 +23,7 @@
 <br>
             <input type="button" value="Login" class="details-button">
 
-          <P>  Not a member </P>?  <a href ="C:\Users\moner\OneDrive\المستندات\GitHub\web-project\mainHomePageM.html"> Sign Up Here</a></P>
+          <P>  Not a member? </P>  <a href ="../web-project/mainHomePageM.html"> Sign Up Here</a></P>
     </form>
 </body>
 
