--- a/ProfileInformation.html
+++ b/ProfileInformation.html
@@ -29,8 +29,8 @@ Texas A & M university <br>
 Bachleor of Arts : child care.
           </div>
           <br>
-                <div>
-                <a href=><button>Contact for interview</button></a>
+                <div>    
+                <input type="button" value="ContactForInterview" class="details-button">
                 </div>
         </fieldset>
         <fieldset>
