--- a/signUpBabysitterM.html
+++ b/signUpBabysitterM.html
@@ -6,10 +6,11 @@
         <link rel="stylesheet" type="text/css" href="../web-project/style.css">
 
     </head>
-
-    <body class="background" style="text-align:center ; margin-top: 2%; border-style:groove ;font-family:Arial;font-size: 12pt" >  
- <h1>Sign Up</h1>
- <h4>Please fill in this form to create an account.</h4>
+  
+    <body class="background"  >  
+ <div class="signUpbabysitter">
+        <h1>Sign Up</h1>
+ <h3>Please fill in this form to create an account.</h3>
  <form method="post">
 
 <label for="Name"><b>First Name </b></label>
@@ -77,7 +78,9 @@
 <br>
 </div>
 
+
 </form>
+</div>
 </body>
 </html>
 
