--- a/ProfileInformation.html
+++ b/ProfileInformation.html
@@ -30,7 +30,7 @@ Bachleor of Arts : child care.
           </div>
           <br>
                 <div>    
-                <input type="button" value="ContactForInterview" class="details-button">
+                <input type="button" value="Contact for interview" class="details-button">
                 </div>
         </fieldset>
         <fieldset>
