--- a/signUpBabysitterM.html
+++ b/signUpBabysitterM.html
@@ -8,7 +8,7 @@
     </head>
   
     <body class="background"  >  
- <div class="signUpbabysitter">
+ <div class="signUp">
         <h1>Sign Up</h1>
  <h3>Please fill in this form to create an account.</h3>
  <form method="post">
