--- a/signupParentM.html
+++ b/signupParentM.html
@@ -7,11 +7,10 @@
     </head>
 
 
-    <body class="background" style="text-align:center ; margin-top: 2%; border-style:groove ; font-family:Arial;font-size: 14pt;" > 
-
-
+    <body class="background"> 
+<div class="signUp">
  <h1>Sign Up</h1>
- <h4>Please fill in this form to create an account.</h4>
+ <h3>Please fill in this form to create an account.</h3>
  <form method ="post">
 <label for="Name"><b>First Name </b></label>
  <input type="text" placeholder="Enter First Name" name="Name" required>
@@ -55,6 +54,6 @@
 
 </form>
 
-
+</div>
 </body>
 </html>
