--- a/veiwDetailsOffer2.html
+++ b/veiwDetailsOffer2.html
@@ -38,7 +38,7 @@
                  <div class="price">
         
                     <h2>Price</h2>
-                   <center> <strong>19$/hr</strong> <br> Hourly rate </center>
+                   <center> <strong>80SR/hr</strong> <br> Hourly rate </center>
                 
                  </div>
                  <form method="post" action="#">
