--- a/Rating2.html
+++ b/Rating2.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Rating and Review</title>
-    <link rel="stylesheet" href="Rating.css">
+    <link rel="stylesheet" href="../web-project/Rating.css">
   </head>
   <body class="background" >
   
